# news

./: Dockerfile  README.md  alembic.ini  display.sh  endpoints.config.example.json  method.sh  pia.conf  pyproject.toml  quillbot_launcher.py  requirements.txt  rewrite_translate.py  scrapy.cfg  vpn.sh
adace/: adblock-detector.php
amp/: header.php  single.php  style.php
articles_scrapers/: articles_xpath.py  settings.py
articles_scrapers/commands/: base_command.py  generate_rewrite_command.py
articles_scrapers/items/: __init__.py  article_item.py
articles_scrapers/middlewares/: __init__.py  proxy_middleware.py
articles_scrapers/pipelines/: __init__.py  save_article_pipeline.py  textfile_pipeline.py
articles_scrapers/pm2/: pm2-workers.json
articles_scrapers/spiders/: nytimes_spider.py
buddypress/groups/: groups-loop.php  index.php
buddypress/members/: index.php  members-loop-item.php  members-loop.php  register.php
database/: connection.py
database/migrations/: env.py
database/models/: __init__.py  article_model.py  rewrite_model.py
database/queries/: __init__.py  queries.py
flickr/: credentials  flickr-unofficial-api.py  requirements.txt
gpt-2/: Dockerfile.gpu  README_gpt2.md  README_ru.md  requirements.txt  text_rewrite.py  text_rewrite_api.py
paraphrase_services/: items.py  middlewares.py  pipelines.py  settings.py
sh/: quillbot_executor.sh
translate_transition/: __init__.py  base_translator.py  bing_translator.py  google_translator.py  rewriter.py
utils/: __init__.py  configure_logging.py  constants.py  text_splitter.py
(+31 files in other folders)
