[tool.poetry]
name = "NLG_Articles_Rewriter"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.6"
googletrans = "^3.0.0"
requests = "^2.24.0"
spacy = "^2.3.1"
click = "^7.1.2"
translate-api = "^4.6.18"
scrapy = "^2.2.0"
furl = "^2.1.0"
sqlalchemy = "^1.3.18"
pymysql = "^0.9.3"
alembic = "^1.4.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
